# Tic-tac-toe

./: .gitignore  AI.cpp  AI.h  Board.cpp  Board.h  CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.h  Game.h  GameModeWindow.ui  LoginWindow.cpp  MainMenuWindow.ui  README.md  RegisterWindow.cpp  RegisterWindow.h  RegisterWindow.ui  TicTacToe.h  code.txt  main.cpp
.github/workflows/: cd.yml  ci.yml
GUI/: DatabaseManager.cpp  GameHistoryWindow.cpp  GameHistoryWindow.ui  GameModeWindow.cpp  GameModeWindow.ui  Game_gui.cpp  LoginWindow.cpp  LoginWindow.ui  MainMenuWindow.cpp  MainMenuWindow.ui  RegisterWindow.cpp  RegisterWindow.ui  TicTacToe.cpp  TicTacToe.ui  main_gui.cpp
Game_Logic/: AI.cpp  Board.cpp  Game.cpp
SRC/: AI.cpp  AI.h  Board.cpp  Board.h  Game.cpp  Game.h  main.cpp
include/: AI.h  Board.h  DatabaseManager.h  Game.h  GameHistoryWindow.h  GameModeWindow.h  Game_gui.h  LoginWindow.h  MainMenuWindow.h  RegisterWindow.h  TicTacToe.h
tests/: test_ai.cpp  test_board.cpp  test_game.cpp  test_integration.cpp
